--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
    <head>
-      <meta http-equiv="refresh" content="5">
+      
       <meta charset="utf-8">
       <meta name="viewport" content="width=width-device, initial-scale=1">
       <title>Akif Ahmed Khan, ID:15301100, Main page</title>
@@ -28,7 +28,7 @@
             </td>
          </tr>
          <tr valign = "top">
-            <td bgcolor = "#aaa" width = "100">
+            <td bgcolor = "#B0CDAC" width = "100%">
                <h3>Navigation:</h3>
                <a href="#div_1">Personal information</a>
                <a href="#div_2">Hobbies</a>
@@ -40,7 +40,7 @@
 
 
          <tr>
-            <td colspan = "3" bgcolor = "#b5dcb3">
+            <td colspan = "3" bgcolor = "#7EAA78">
                <div id="div_1">
                   <h1>Personal information</h1>
                   Hey, I am a student of <a href="https://www.bracu.ac.bd/">BRAC University</a> and I am on my final Semester of my Undergrad. This website is a project as a part of my CSE391 course which is: Programming for the internet. Click on <a href="https://piazza.com/class/k5c40t5z1wz313?cid=24">this</a> to go to the <b>Piazza</b> page for this course. <br /><br />
@@ -74,9 +74,15 @@
                       <td>GPA 5.00</td>
                       <td>2012</td>
                     </tr>
+                    <tr>
+                      <td colspan ="4">Just a test for column span</td>
+                    </tr>
                   </table>
                   </center>
                   <br/><br/>
+
+
+
                   (just for show)
                   Travelling is one of those few activities that has a kind of reset button in our lives. You go away for a few days or weeks and come back fresh and ready to take on challenges of life head on. Travelling to many people is a matter of convenience, rather than a recreation activity. They only travel when they have an issue to attend to. Travelling is also not for escapists, as many people tend to believe. I used the word ‘escapists’ not in the literary sense of the word, but rather to mean people who run away from their problems. Travelling is a hobby like any other.
 
@@ -87,7 +93,7 @@
             </td>
          </tr>
          <tr>
-            <td colspan = "2" bgcolor = "#b5dcb3">
+            <td colspan = "2" bgcolor = "#4A8042">
                <div id="div_2">
                   <h1>Hobbies</h1>
                   (cited from another article, just for preview)
@@ -111,7 +117,7 @@
          </tr>
 
          <tr valign = "top">
-            <td colspan = "2" bgcolor = "#b5dcb3">
+            <td colspan = "2" bgcolor = "A6C2A1">
                <div id="div_3">
                   <h1>Favourite Quote</h1>
 
@@ -154,9 +160,11 @@
             </td>
          </tr>
       </table>
-      <p><script type="text/javascript" src="javaScript/js_dom.js"></script></p>
-
 
    </body>
 
 </html>
+<script language="JavaScript">
+var testlast=document.lastModified;
+document.write(" "+testlast.substr(0,10));
+</script>
